syntax = "proto3";

package enterprise;
option go_package="./pb";

message Empty {}

service enterprise {
    rpc Insert (EnterpriseInfo) returns (InsertResp);
    rpc Delete (DeleteReq) returns (Empty);
    rpc Change (EnterpriseInfoWithId) returns (Empty);
    rpc PartialChange (EnterpriseInfoWithId) returns (Empty);
    rpc FindOneByName (FindOneByNameReq) returns (EnterpriseInfo);

    rpc InsertXa (EnterpriseInfo) returns (InsertResp);
}

message EnterpriseInfo {
    string Name    = 2;
    string Address = 3;
    string Remark  = 4;
    int64  Version = 5;
}

message InsertResp {
    int64 Id = 1;
}

message DeleteReq {
    int64 id = 1;
}

message EnterpriseInfoWithId {
    int64  Id      = 1;
    string Name    = 3;
    string Address = 4;
    string Remark  = 5;
    int64  Version = 6;
    
}

message FindOneByNameReq {
    string Username = 1;
}